@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-16T16:23:33Z",
+  "timestamp" : "2024-05-17T08:23:41Z",
   "count_outdated" : 745,
   "uniques_outdated" : 364,
-  "count" : 760,
-  "uniques" : 375,
+  "count" : 761,
+  "uniques" : 376,
   "clones" : [
     {
       "timestamp": "2024-05-08T00:00:00Z",
@@ -73,6 +73,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-05-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
